# promptgen

./: .gitignore  Cargo.toml  LICENSE  README.md  jinja_test.py
data/: sample.json
scripts/: json_schema.j2  json_schema_types.j2
scripts/concepts/: json_schema_fields.j2  promptgen.j2  toe.j2  toe_laws.j2  tool.j2
scripts/structured_data/: argument_sanity.json
scripts/structured_tests/: README.md  argument_sanity.j2  base64_sanity.j2  hash_sanity.j2  json_sanity.j2  repeat_sanity.j2  uuid_sanity.j2  web_sanity.j2
scripts/test/: env.j2  filters.j2  globals.json  hash.j2  http_get.j2  read_json.j2  regex.j2  time.j2  uuid.j2  whitespace.j2
src/: lib.rs  main.rs
src/core/: filters.rs  functions.rs  loader.rs  mod.rs  options.rs
src/core/functional/: json.rs  mod.rs  net.rs  os.rs  utility.rs
